Ensure JavaFX modules included in distribution scripts